# 2048-CPP

./: 3x3_bruteforce.h  CMakeLists.txt  LICENSE  README.md  algorithm.h  assets.h  board.h  board_3x3.h  board_all.h  bruteforce.txt  bruteforce_important.txt  endgame_bruteforce.h  eval.h  general_board.h  learn.h  lines.h  main.cpp  run.sh  stage_starts.txt  stats.h  stats.py  testing.h  tests.cpp  tuple.h
backup_after_training/: algorithm.h  endgame_bruteforce.h  eval.h  learn.h  main.cpp  testing.h  tuple.h
backups/: 3x3_board_u64.h  bruteforce_0.txt  bruteforce_extracted_0.txt  bruteforce_important_0.txt  commands.txt  new_commands.txt  tuple_selection.txt  tuple_selection_all.txt
logs/: 105M125M_learn.txt  12_tuple_1M_learn_2cores.txt  12tuple_35M_learn_8core_local.txt  12tuple_serial_run_short.txt  formation_stats_th10.txt  formation_stats_th12.txt  formation_stats_th9.txt  multithreading_vs_serial.txt  probs_500_state500search.txt
logs/bruteforce_3x3/: bruteforce_important.txt
logs/bruteforce_4x4/: bruteforce_streamsize_limit_reached_9to10.txt  formation_stats_th11.txt  formation_stats_th13.txt  formation_stats_th14.txt  formation_stats_th15.txt  stats_L32000_G8_1000x100_eval_change_bases.txt  stats_L32256_G9_1000x100_eval_change_bases.txt  stats_L32512_G8_1000x1000_eval.txt  stats_L32523_G8_1000x100_eval_change_bases.txt
logs/progress_probs_scores/: most_useful_bruteforces_10GB.txt  most_useful_bruteforces_120GB.txt  (+9 more)
other_programs/: board_original.h  general_board.h  main_original.cpp  stats.h  stats.py  testing.h
run/: slurm_submit.peta4-icelake
(+15 files in other folders)
